--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.1",
@@ -55,6 +56,9 @@
     "react-native-unistyles": "^2.4.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
+    "reactotron-react-native": "^5.1.7",
+    "reactotron-redux": "^3.1.9",
+    "redux-persist": "^6.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
