--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@shopify/flash-list": "^1.6.4",
     "@shopify/react-native-skia": "^1.0.4",
+    "add": "^2.0.6",
     "axios": "^1.6.8",
     "expo": "^50.0.13",
     "expo-font": "^11.10.3",
@@ -49,16 +50,20 @@
     "react-native-keys": "^0.7.10",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.1",
+    "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.1.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.5.2",
     "react-native-unistyles": "^2.4.0",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-icons": "10.0.3",
     "react-redux": "^9.1.0",
     "reactotron-react-native": "^5.1.7",
     "reactotron-redux": "^3.1.9",
     "redux-persist": "^6.0.0",
+    "yarn": "^1.22.22",
     "zod": "^3.22.4"
   },
   "devDependencies": {
